<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}"
    android:orientation="vertical">

   	<TextView
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_horizontal"
   	    android:text="@string/title"
   	    android:textAlignment="center"
   	    android:textSize="20sp"
   	    android:textStyle="bold"/>
   	
   	<TextView
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_horizontal"
   	    android:text="@string/title_log"
   	    android:textAlignment="center"
   	    android:textSize="14sp"
   	    android:textStyle="bold"/>
   	
   	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onLogButtonPressed"
	        android:text="@string/red"
	        android:background="@color/red"
	        android:layout_margin="4sp"
	        android:paddingTop="4sp"
	        android:paddingBottom="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onLogButtonPressed"
	        android:text="@string/green" 
	        android:background="@color/green"
	        android:layout_margin="4sp"
	        android:paddingTop="4sp"
	        android:paddingBottom="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onLogButtonPressed"
	        android:text="@string/blue"
	        android:background="@color/blue"
	        android:layout_margin="4sp"
	        android:paddingTop="4sp"
	        android:paddingBottom="4sp"/>
   	</LinearLayout>
   	
   	<TextView
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_horizontal"
   	    android:text="@string/title_progression"
   	    android:textAlignment="center"
   	    android:textSize="14sp"
   	    android:textStyle="bold"/>
   	
   	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onStartPlayerProgression"
	        android:text="@string/lvl1"
	        android:layout_margin="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl2" 
	        android:layout_margin="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl3"
	        android:layout_margin="4sp"/>
   	</LinearLayout>
   	
   	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl4"
	        android:layout_margin="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl5" 
	        android:layout_margin="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl6"
	        android:layout_margin="4sp"/>
   	</LinearLayout>
   	
   	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl7"
	        android:layout_margin="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl8" 
	        android:layout_margin="4sp"/>
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="onPlayerProgression"
	        android:text="@string/lvl9"
	        android:layout_margin="4sp"/>
   	</LinearLayout>
   	
   	<TextView
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_horizontal"
   	    android:text="@string/title_ads"
   	    android:textAlignment="center"
   	    android:textSize="14sp"
   	    android:textStyle="bold"/>
   	
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onShowFakeAd"
        android:text="@string/show_ad"
        android:layout_margin="4sp"/>   
   	
   	<TextView
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_horizontal"
   	    android:text="@string/title_messaging"
   	    android:textAlignment="center"
   	    android:textSize="14sp"
   	    android:textStyle="bold"/>

    <Button
        android:id="@+id/show_message_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onGetMessageClick"
        android:text="@string/show_message_label"
        android:layout_margin="4sp"/>
   	
   	
   	<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
	    <Button
	        android:layout_gravity="bottom"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="4sp"
	        android:onClick="onShowBank"
	        android:text="@string/bank" />
   	</FrameLayout>

</LinearLayout>
