<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bank" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bank_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/gold"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bank_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/silver"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bank_bronze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/bronze"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bank_diamonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bank_pearls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bank_rubies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/red"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/input_gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="@string/gold"
            android:inputType="number|numberSigned"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_silver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="@string/silver"
            android:inputType="number|numberSigned"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_bronze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="@string/bronze"
            android:inputType="number|numberSigned"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/input_diamonds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="@string/diamonds"
            android:inputType="number|numberSigned"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_pearls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="@string/pearls"
            android:inputType="number|numberSigned"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_rubies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="@string/rubies"
            android:inputType="number|numberSigned"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/on_earn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/earn" />

        <CheckBox
            android:id="@+id/is_on_sale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sale" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_name"
            android:maxLines="1" />

        <Button
            android:id="@+id/on_buy_item"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/buy_item" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button
            android:id="@+id/on_buy_gold"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/buy_gold" />

        <Button
            android:id="@+id/on_buy_jewels"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/buy_jewels" />
    </LinearLayout>

</LinearLayout>